--- a/client/taxi-treasure/package.json
+++ b/client/taxi-treasure/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
